--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ target="_blank"> See for yourself
             <td>
             <img src="pics/fargo.jpg" class="img-rectangle" alt="Fargo"></td>
             <td id="content">
-            <h3>Fargo (2014) <a href="https://www.rottentomatoes.com/m/fargo/"><img src="pics/tomato.jpg" alt="See on rotten tomatoes"></a></h3>
+            <h3>Fargo (2014) <a href="https://www.rottentomatoes.com/m/fargo/"><img src="pics/tomato.jpg" class="tomato" alt="See on rotten tomatoes"></a></h3>
             <p><div class="description">An anthology series inspired by the 1996 Coen brothers film. The first season follows a drifter who brings trouble to small-town Minnesota in 2006, while Season 2 focuses on a young state police officer and Vietnam veteran in 1979 South Dakota and Minnesota.</div></p>
             </td>
           </tr>
