--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   </nav>
   <div class="container">
     <div class="card text-center">
-      <img src="pics/photo.jpg" class="img-circle" alt="Picture of Rémy Lichani">
+      <img src="pics/photo.jpg" id="picture" alt="Picture of Rémy Lichani">
       <h1><strong>Rémy Lichani</strong></h1>
       <h2>Student @Le Wagon</h2>
       <p>Joined Le Wagon right after getting my Management degree @NEOMA Business School. Le Wagon bootcamp is the best way to <strong>learn coding in 9 weeks</strong>.</p>
@@ -62,7 +62,7 @@ target="_blank"> See for yourself
               <img src="pics/tpeaks.jpg" class="img-rectangle" alt="Twin Peaks">
             </td>
             <td>
-              <h3>Twin Peaks (1991) <a href="https://www.rottentomatoes.com/m/twinpeaks/" target="_blank"><img src="pics/tomato.jpg" id="rottent" alt="See on rotten tomatoes"></a></h3>
+              <h3>Twin Peaks (1991) <a href="https://www.rottentomatoes.com/tv/twin_peaks" target="_blank"><img src="pics/tomato.jpg" id="rottent" alt="See on rotten tomatoes"></a></h3>
               <p><div class="description">A surreal cult favourite about the investigation into the murder of a high-school homecoming queen in a Pacific Northwest lumber town. Co-created by filmmaker David Lynch, who also directed two episodes, the drama is a mysterious and mystical (when it wasn't merely murky) excursion into the dark side of human nature, rife with sex, violence, dream sequences and a gallery of bizarre characters. It was risky and provocative, but not everyone's cup of damn fine coffee and it was gone in a year.</div>
               </p>
             </td>
@@ -72,7 +72,7 @@ target="_blank"> See for yourself
               <img src="pics/legion.jpg" class="img-rectangle" alt="Legion">
             </td>
             <td>
-              <h3>Legion (2017)<a href="https://www.rottentomatoes.com/m/legion"><img src="pics/tomato.jpg" id="rottent" alt="See on rotten tomatoes" target="_blank"></a></h3>
+              <h3>Legion (2017) <a href="https://www.rottentomatoes.com/tv/legion"><img src="pics/tomato.jpg" id="rottent" alt="See on rotten tomatoes" target="_blank"></a></h3>
               <p><div class="description">Legion follows the story of David Haller, a troubled young man who may be more than human. Since he was a teenager, David has struggled with mental illness. Diagnosed as schizophrenic, David has been in and out of psychiatric hospitals for years. But after a strange encounter with a fellow patient, he's confronted with the possibility that the voices he hears and the visions he sees might be real.</div>
               </p>
             </td>
