--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
       <h2>Student @Le Wagon</h2>
       <p>Joined Le Wagon right after getting my Management degree @NEOMA Business School. Le Wagon bootcamp is the best way to <strong>learn coding in 9 weeks</strong>.</p>
       <a class="btn btn-warning"" href="https://www.lewagon.com/"
-target="_blank"> See for yourself
-      </a>
+target="_blank"> See for yourself</a>
     </div>
     <div class="card">
       <h2 class="text-center" id="shows"><strong>TV Shows</strong></h2>
